tests/diagnostics/file_roles/export_declarations/in_binary/expect.txt
# exit: 1
input/main.bin.coppice:1:1: error: export declarations are only allowed in PACKAGE.coppice
  export { Token }
  ^
